--- a/wtfamily/templates/base.html
+++ b/wtfamily/templates/base.html
@@ -47,6 +47,7 @@
               <li class="dropdown">
                   <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Maps <span class="caret"></span></a>
                   <ul class="dropdown-menu" role="menu">
+                    <li><a href="{{ url_for('map_places') }}">Places</a></li>
                     <li><a href="{{ url_for('map_circles_integrated') }}">Event Density</a></li>
                     <li><a href="{{ url_for('map_heatmap') }}">Heat</a></li>
                   </ul>
