--- a/wtfamily/templates/person_detail.html
+++ b/wtfamily/templates/person_detail.html
@@ -30,6 +30,11 @@
         <p>Фактов о родителях или семьях нет, поэтому в семейном древе персона не отображается.</p>
     {% endif %}
 
+    {% if obj.places %}
+        <p><a href="{{ url_for('map_migrations', person_ids=obj.id) }}">Посмотреть перемещения на карте</a></p>
+    {% endif %}
+    <p><a href="{{ url_for('map_migrations', person_ids=obj.related_people|join(',', attribute='id')) }}">Посмотреть перемещения всех связанных лиц на карте</a></p>
+
     {% for family in obj.get_parent_families() %}
         <dt><a href="{{ url_for('family_detail', obj_id=family.id) }}">Семья родителей</a></dt>
         <dd>
@@ -110,12 +115,12 @@
 <table class="table table-striped table-hover">
   <tr>
     <th>ID</th>
-    <th>Place</th>
-    <th>Date</th>
-    <th>Type</th>
-    <th>Summary</th>
-    <th>People</th>
-    <th>Citations</th>
+    <th>Место</th>
+    <th>Дата</th>
+    <th>Тип</th>
+    <th>Описание</th>
+    <th>Другие участники</th>
+    <th>Цитаты</th>
   </tr>
 {% for event in obj.events|sort(attribute='date') %}
   <tr>
