Show distances between events, etc.

--- a/wtfamily/templates/map_places.html
+++ b/wtfamily/templates/map_places.html
@@ -76,6 +76,9 @@ google.maps.event.addDomListener(window, 'load', initialize);
     </script>
 {% endblock %}
 
+{% block page_header %}
+{% endblock %}
+
 {% block content %}
 
 <div id="map-canvas"></div>
