--- a/wtfamily/templates/place_detail.html
+++ b/wtfamily/templates/place_detail.html
@@ -9,7 +9,7 @@
 
 <dl class="dl-horizontal">
   <dt>Другие названия</dt>
-    <dd>{{ obj.alt_name|join(', ') or '—' }}</dd>
+    <dd>{{ obj.alt_names|join(', ') or '—' }}</dd>
 
   {% if obj.parent_places %}
     <dt>В составе мест</dt>
