--- a/wtfamily/templates/base.html
+++ b/wtfamily/templates/base.html
@@ -61,6 +61,10 @@
     <div class="container">
 
       <div class="page-header">
+        <div id="breadcrumbs">
+            {% block breadcrumbs %}
+            {% endblock %}
+        </div>
         <h1>{% block heading %}What The Family{% endblock %}</h1>
       </div>
 
