--- a/wtfamily/templates/citation_list.html
+++ b/wtfamily/templates/citation_list.html
@@ -6,17 +6,24 @@
 
 {% block content %}
 
-<ul>
-{% for citation in object_list %}
-    <li>
-        <a href="{{ url_for('citation_detail', obj_id=citation.id) }}">{{ citation.id }}</a>
-        {{ citation.page|urlize or '(page?)' }}
-        {% if citation.date %}
-          ({{ citation.date }})
-        {% endif %}
-        {#<code>{{ citation._data|pprint }}</code>#}
-    </li>
+<dl>
+{% for source in groups %}
+    <dt>{{ source }}</dt>
+    <dd>
+        <ul>
+        {% for citation in groups[source] %}
+            <li>
+                <a href="{{ url_for('citation_detail', obj_id=citation.id) }}">{{ citation.id }}</a>
+                {{ citation.page|urlize or '(page?)' }}
+                {% if citation.date %}
+                  ({{ citation.date }})
+                {% endif %}
+                {#<code>{{ citation._data|pprint }}</code>#}
+            </li>
+        {% endfor %}
+        </ul>
+    </dd>
 {% endfor %}
-</ul>
+</dl>
 
 {% endblock %}
