--- a/wtfamily/templates/source_detail.html
+++ b/wtfamily/templates/source_detail.html
@@ -15,11 +15,13 @@
     <ul>
     {% for citation in obj.citations|list|sort(attribute='date') %}
         <li>
-            <a href="{{ url_for('citation_detail', obj_id=citation.id) }}">{{ citation.id }}</a>
-            {{ citation.page|urlize or '(page?)' }}
-            {% if citation.date %}
-              ({{ citation.date }})
-            {% endif %}
+            <a href="{{ url_for('citation_detail', obj_id=citation.id) }}">
+                {{ citation.id }} —
+                {{ citation.page|urlize or '(page?)' }}
+                {% if citation.date %}
+                  ({{ citation.date }})
+                {% endif %}
+            </a>
             {#<code>{{ citation._data|pprint }}</code>#}
             {% for note in citation.notes %}
               <blockquote>
