--- a/wtfamily/templates/person_list.html
+++ b/wtfamily/templates/person_list.html
@@ -1,5 +1,7 @@
 {% extends 'base.html' %}
 
+{% block title -%}People{%- endblock %}
+
 {% block heading %}
     People
 {% endblock %}
@@ -21,7 +23,7 @@
           <span class="icon-female">♀<span>
         {% endif %}
         <small class="text-muted">
-          {% if obj.birth %}☀{{ obj.birth }}{% endif %}
+          {% if obj.birth %}✶{{ obj.birth }}{% endif %}
           &nbsp;
           {% if obj.death %}✝{{ obj.death }}{% endif %}
         </small>
