--- a/wtfamily/templates/place_list.html
+++ b/wtfamily/templates/place_list.html
@@ -1,5 +1,7 @@
 {% extends 'base.html' %}
 
+{% block title -%}Places{%- endblock %}
+
 {% macro render_tree_of_places(places) %}
     {% if places %}
         <ul>
